--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -18,17 +18,27 @@
   url = "people"
   weight = 30
 
-[[main]]
-  name = "Events"
-  url = "event"
-  weight = 40
+#[[main]]
+#  name = "Events"
+#  url = "event"
+#  weight = 40
 
+[[main]]
+  name = "Experiments"
+  url = "setups"
+  weight = 40
+  
+[[main]]
+  name = "Projects"
+  url = "projects"
+  weight = 50
+  
 [[main]]
   name = "Publications"
   url = "publication"
-  weight = 50
+  weight = 60
 
 [[main]]
   name = "Contact"
   url = "contact"
-  weight = 60
+  weight = 70
