--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -98,8 +98,8 @@ address = {street = "Institut des Sciences Moléculaires d'Orsay, Bat. 520 rue A
 # To get your coordinates, right-click on Google Maps and choose "What's here?". The coords will show up at the bottom.
 coordinates = {latitude = "48.70689", longitude = "2.17794"}
 
-# Directions for visitors to locate you.
-directions = "Institut des Sciences Moléculaires d'Orsay"
+## Directions for visitors to locate you.
+#directions = "Institut des Sciences Moléculaires d'Orsay"
 
 # Office hours
 # A list of your office hours. To remove, set to an empty list `[]`.
