--- a/data/themes/mytheme.toml
+++ b/data/themes/mytheme.toml
@@ -1,17 +1,17 @@
 # Theme metadata
-name = "mytheme"
+name = "myTheme"
 
 # Is theme light or dark?
 light = true
 
 # Primary
-primary = "rgb(148, 0, 0)"
+primary = "#1565c0"
 
 # Menu
-menu_primary = "rgb(148, 0, 0)"
-menu_text = "rgb(255, 255, 255)"
-menu_text_active = "rgb(204, 204, 204)"
-menu_title = "rgb(255, 255, 255)"
+menu_primary = "#d2d2d2"
+menu_text = "#34495e"
+menu_text_active = "#2962ff"
+menu_title = "#2b2b2b"
 
 # Home sections
 home_section_odd = "rgb(255, 255, 255)"
@@ -20,3 +20,4 @@ home_section_even = "rgb(247, 247, 247)"
 [dark]
   link = "#bbdefb"
   link_hover = "#bbdefb"
+
