--- a/data/themes/mytheme.toml
+++ b/data/themes/mytheme.toml
@@ -18,6 +18,6 @@ home_section_odd = "rgb(255, 255, 255)"
 home_section_even = "rgb(247, 247, 247)"
 
 [dark]
-  link = "#bbdefb"
-  link_hover = "#bbdefb"
+  link = "#4d6c8b"
+  link_hover = "#4d6c8b"
 
